<resources>
    <string name="app_name">Budget App</string>

    <string name="action_settings">Settings</string>
    <string name="action_delete">Delete</string>
    <string name="action_add">Add</string>
    <string name="action_search">Search</string>

    <string name="data_input">Enter In A Value And Fill In The Table</string>
    <string name="category">Category</string>
    <string name="amount">Amount</string>
    <string name="expense">expense</string>
    <string name="expenses">Expenses</string>
    <string name="income">income</string>
    <string name="budget">Budget</string>
    <string name="note">Note</string>

    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="year">Year</string>

    <!-- Nav Menu Strings -->
    <string name="dashboard">Dashboard</string>
    <string name="charts">Charts</string>
    <string name="data">Data Logs</string>

    <!-- FRAGMENT DASHBOARD -->
    <string name="dashboard_title">Overview</string>
    
    <string name="switch_chart">Switch To Chart</string>
    <string name="switch_data">Switch to Data</string>


    <string-array name="categoryarray">
        <item>Groceries</item>
        <item>Utilities</item>
        <item>Entertainment</item>
        <item>Medical</item>
        <item>Entertainment</item>
        <item>Income</item>
    </string-array>
    <string name="title_activity_data">DataActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_activity_graph">GraphActivity</string>
</resources>
