<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView android:id="@+id/label_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        style="@style/textview_label"
        android:text="@string/data_input"/>

    <TextView android:id="@+id/label_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/label_input"
        style="@style/textview_label"
        android:text="@string/category"/>

    <Spinner android:id="@+id/spinner_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/label_category"
        android:layout_toEndOf="@+id/label_category"
        style="@style/spinner_style"/>

    <TextView android:id="@+id/label_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/label_category"
        style="@style/textview_label"
        android:text="@string/amount"/>

    <EditText android:id="@+id/edittext_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/label_amount"
        android:layout_toEndOf="@id/label_amount"
        android:inputType="numberDecimal"
        android:hint="Enter amount"/>

    <ToggleButton android:id="@+id/income_or_expense_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/edittext_amount"
        android:layout_alignBaseline="@id/edittext_amount"
        android:textOff="@string/expense"
        android:textOn="@string/income"/>

    <TextView android:id="@+id/label_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/label_amount"
        style="@style/textview_label"
        android:text="@string/note"/>

    <EditText android:id="@+id/eddittext_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/label_note"
        android:layout_toEndOf="@id/label_note"
        android:layout_marginLeft="12dp"/>

    <DatePicker android:id="@+id/datepicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/label_note"
        android:datePickerMode="spinner"
        android:calendarViewShown="false"
        android:layout_centerHorizontal="true"/>

    <ImageButton android:id="@+id/imagebtn_submit"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:scaleType="fitXY"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:src="@drawable/ic_add_item"/>

</RelativeLayout>