<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardview"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/cardview_relative_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/cardview_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="8-12-15"
            android:textSize="10pt" />

        <LinearLayout
            android:id="@+id/budget_label_layout"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cardview_date"
            android:layout_centerHorizontal="true"
            android:weightSum="3">

            <TextView
                android:id="@+id/cardview_label_expenses"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/expenses"
                android:textSize="8pt" />

            <TextView
                android:id="@+id/cardview_label_amount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/amount"
                android:textSize="8pt" />

            <TextView
                android:id="@+id/cardview_label_budget"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/budget"
                android:textSize="8pt" />
        </LinearLayout>

        <LinearLayout android:id="@+id/budget_form_layout"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/budget_label_layout"
            android:weightSum="3">
            <TextView
                android:id="@+id/cardview_expenses"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="8pt" />
            <TextView
                android:id="@+id/cardview_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="8pt" />

            <TextView
                android:id="@+id/cardview_budget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="8pt"/>
        </LinearLayout>

    </RelativeLayout>
</android.support.v7.widget.CardView>